# advanced-python-itmo-course-2024

./: README.md
hw_1/artifacts/: artefact_1.txt  artefact_2.txt  artefact_3.txt
hw_2/: generate_latex_table.py  latex_generators.py  pdf_generate.py  to_pdf.tex
hw_2/artifacts/: Dockerfile  table.tex  test_pypi_link.txt
hw_2/latex_test_pakholkov_package/: README.md  pyproject.toml
hw_2/latex_test_pakholkov_package/src/latex_test_pakholkov_package/: latex_generators.py
hw_3/: hashing.py  hasing_collision.py  requirements.txt  testing_matrices_operations.py  testing_mixin_class.py
hw_3/artifacts/3.3/: AB.txt  C.txt  CD.txt  hash.txt
hw_3/matrix_operations_pakholkov_package/src/: matrix_operations.py
hw_4/: app_with_queue.py  fibonacci_multi.py  fibonacci_sync.py  fibonacci_thread.py  parrallel_integrate.py
hw_4/artifacts/: fibonacci_results.txt  integrate_execution_times.txt  integrate_log.txt  queue_pipe_interaction.txt
