[project]
name = "latex_test_pakholkov_package"
version = "0.0.1"
authors = [
  { name="Victor Pakholkov", email="VictorPakholkov@outlook.com" },
]
description = "It is a small package, converting list of lists to valid .tex file along with adding pictures to it. It was created solely for the purpose of completing a second homework of Advanced Python ITMO University course."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/VictorPakholkov/advanced-python-itmo-course-2024"
Issues = "https://github.com/VictorPakholkov/advanced-python-itmo-course-2024/issues"

[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"
